--- a/images/php-fpm/debian/blackfire/Dockerfile
+++ b/images/php-fpm/debian/blackfire/Dockerfile
@@ -10,10 +10,12 @@ USER root
 COPY blackfire/rootfs/. /
 
 RUN set -eux \
-    && apt-get update && apt-get install -y gnupg2 \
+    && apt-get update && apt-get install -y --no-install-recommends \
+    gnupg2 \
     && wget -q -O - https://packages.blackfire.io/gpg.key | apt-key add - \
     && echo "deb http://packages.blackfire.io/debian any main" > /etc/apt/sources.list.d/blackfire.list \
-    && apt-get update && apt-get install blackfire-php \
+    && apt-get update && apt-get install -y --no-install-recommends \
+    blackfire-php \
     && rm -rf /var/lib/apt/lists/* /var/log/apt \
     && mkdir -p /tmp/blackfire \
     && curl -fsSL https://blackfire.io/api/v1/releases/client/linux_static/amd64 | tar zxp -C /tmp/blackfire \
