--- a/images/php-fpm/debian/wordpress-web/Dockerfile
+++ b/images/php-fpm/debian/wordpress-web/Dockerfile
@@ -28,20 +28,21 @@ COPY magento2-web/rootfs/. /
 USER root
 
 RUN set -eux \
-  && apt-get update && apt-get install -y gnupg2 \
-  && echo "deb https://nginx.org/packages/debian/ $(lsb_release -sc) nginx" >/etc/apt/sources.list.d/nginx.list \
-  && wget -q -O - https://nginx.org/keys/nginx_signing.key | apt-key add - \
-  && wget -q -O - https://github.com/ochinchina/supervisord/releases/download/v${SUPERVISORD_VERSION}/supervisord_${SUPERVISORD_VERSION}_Linux_64-bit.tar.gz | tar zxv -C /tmp \
-  && mv /tmp/supervisor*/supervisord /usr/bin/ \
-  && rm -fr /tmp/supervisor* \
-  && apt-get update && apt-get install -y --no-install-recommends \
-     nginx \
-  && rm -rf /var/lib/apt/lists/* /var/log/apt \
-  && usermod -aG $GID nginx \
-  && rm -f /etc/supervisor/supervisord.conf.dpkg-dist \
-  && mkdir -p /etc/supervisor/conf.d \
-  && chmod +x /usr/local/bin/install-magento2.sh /usr/local/bin/stop-supervisor.sh \
-  && chown -R www-data: /etc/supervisor /etc/nginx /etc/php /var/log/nginx /var/cache/nginx /var/lib/php
+    && apt-get update && apt-get install -y --no-install-recommends \
+    gnupg2 \
+    && echo "deb https://nginx.org/packages/debian/ $(lsb_release -sc) nginx" >/etc/apt/sources.list.d/nginx.list \
+    && wget -q -O - https://nginx.org/keys/nginx_signing.key | apt-key add - \
+    && wget -q -O - https://github.com/ochinchina/supervisord/releases/download/v${SUPERVISORD_VERSION}/supervisord_${SUPERVISORD_VERSION}_Linux_64-bit.tar.gz | tar zxv -C /tmp \
+    && mv /tmp/supervisor*/supervisord /usr/bin/ \
+    && rm -fr /tmp/supervisor* \
+    && apt-get update && apt-get install -y --no-install-recommends \
+       nginx \
+    && rm -rf /var/lib/apt/lists/* /var/log/apt \
+    && usermod -aG $GID nginx \
+    && rm -f /etc/supervisor/supervisord.conf.dpkg-dist \
+    && mkdir -p /etc/supervisor/conf.d \
+    && chmod +x /usr/local/bin/install-magento2.sh /usr/local/bin/stop-supervisor.sh \
+    && chown -R www-data: /etc/supervisor /etc/nginx /etc/php /var/log/nginx /var/cache/nginx /var/lib/php
 #  && ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log
 
 USER www-data
