--- a/images/php-fpm/debian/xdebug3/Dockerfile
+++ b/images/php-fpm/debian/xdebug3/Dockerfile
@@ -10,7 +10,8 @@ USER root
 COPY xdebug3/rootfs/. /
 
 RUN set -eux \
-    && apt-get update && apt-get install -y php${PHP_VERSION}-xdebug \
+    && apt-get update && apt-get install -y --no-install-recommends \
+    php${PHP_VERSION}-xdebug \
     && chown -R www-data: /etc/php /var/lib/php \
     && rm -rf /var/lib/apt/lists/* /var/log/apt
 
