--- a/.github/workflows/dev-docker-image-php.yml
+++ b/.github/workflows/dev-docker-image-php.yml
@@ -22,6 +22,18 @@ jobs:
         php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php
@@ -32,6 +44,9 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
+
   php-fpm:
     name: FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
     runs-on: ubuntu-latest
@@ -44,6 +59,18 @@ jobs:
         php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/_base
@@ -53,6 +80,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   magento1:
     name: Magento 1 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -67,6 +96,18 @@ jobs:
         build_group: [ "magento1" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -75,6 +116,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   magento2:
     name: Magento 2 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -89,6 +132,18 @@ jobs:
         build_group: [ "magento2" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -97,6 +152,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   magento2-web:
     name: Magento 2 WEB - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -111,6 +168,18 @@ jobs:
         build_group: [ "magento2-web" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -119,6 +188,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   wordpress:
     name: Wordpress - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -133,6 +204,18 @@ jobs:
         build_group: [ "wordpress" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -141,6 +224,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   shopware:
     name: Shopware - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -155,6 +240,18 @@ jobs:
         build_group: [ "shopware" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -163,6 +260,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   xdebug3:
     name: Xdebug3 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -177,6 +276,18 @@ jobs:
         build_group: [ "xdebug3" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -185,9 +296,11 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   xdebug2:
-    name: Xdebug2 (Xdebug 2 for backward compatibility) - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    name: Xdebug2 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
     runs-on: ubuntu-latest
     needs: php-fpm
     environment:
@@ -196,9 +309,21 @@ jobs:
       matrix:
         docker_base_images: [ "debian" ]
         php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4" ]
-        build_group: [ "debug2" ]
+        build_group: [ "xdebug2" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -207,6 +332,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
   blackfire:
     name: Blackfire - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -221,6 +348,18 @@ jobs:
         build_group: [ "blackfire" ]
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
@@ -229,3 +368,5 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
