--- a/.github/workflows/main-docker-image-mailhog.yml
+++ b/.github/workflows/main-docker-image-mailhog.yml
@@ -15,6 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
           BUILD_GROUP: mailhog
@@ -22,3 +34,5 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm/v7,linux/arm64"
