--- a/images/php/debian/cli/Dockerfile
+++ b/images/php/debian/cli/Dockerfile
@@ -12,7 +12,6 @@ USER root
 
 COPY --from=composer:1 /usr/bin/composer /usr/bin/composer1
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer2
-COPY --from=hairyhenderson/gomplate:slim /gomplate /usr/local/bin/gomplate
 
 RUN set -eux \
     && echo 'apt::install-recommends "false";' > /etc/apt/apt.conf.d/no-install-recommends \
@@ -44,6 +43,14 @@ RUN set -eux \
       done \
     # Adding apt-get upgrade -y to fix issue with libpcre
     # https://github.com/oerdnj/deb.sury.org/issues/1682
+    && BUILD_ARCH="$(dpkg --print-architecture)" \
+        && if [ "${BUILD_ARCH}" = "arm64" ];  \
+          then GOMPLATE_ARCH="arm64";  \
+          else GOMPLATE_ARCH="amd64" ;  \
+        fi \
+    && curl -fsSLo /usr/local/bin/gomplate \
+      "https://github.com/hairyhenderson/gomplate/releases/latest/download/gomplate_linux-${GOMPLATE_ARCH}-slim" \
+    && chmod +x /usr/local/bin/gomplate \
     && apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends \
     ${PHP_PACKAGES} \
     && rm -rf /var/lib/apt/lists/* /var/log/apt
