--- a/images/nginx/1.20/Dockerfile
+++ b/images/nginx/1.20/Dockerfile
@@ -6,7 +6,8 @@ RUN set -eux \
     && usermod -aG www-data nginx \
     && BUILD_ARCH="$(apk --print-arch)" \
         && if [ "${BUILD_ARCH}" = "aarch64" ];  \
-          then GOMPLATE_ARCH="arm64";  \
+          then GOMPLATE_ARCH="armv7";  \
+          #then GOMPLATE_ARCH="arm64";  \
           else GOMPLATE_ARCH="amd64" ;  \
         fi \
     && wget -q -O /usr/local/bin/gomplate \
