--- a/images/varnish/debian/6.5/Dockerfile
+++ b/images/varnish/debian/6.5/Dockerfile
@@ -87,12 +87,11 @@ RUN set -eux \
     && rm -fr /tmp/supervisor* \
     && BUILD_ARCH="$(dpkg --print-architecture)" \
         && if [ "${BUILD_ARCH}" = "arm64" ];  \
-          then GOMPLATE_ARCH="armv7";  \
-          #then GOMPLATE_ARCH="arm64";  \
+          then GOMPLATE_ARCH="arm64";  \
           else GOMPLATE_ARCH="amd64" ;  \
         fi \
     && curl -fsSLo /usr/local/bin/gomplate \
-      "https://github.com/hairyhenderson/gomplate/releases/latest/download/gomplate_linux-${GOMPLATE_ARCH}-slim" \
+      "https://github.com/hairyhenderson/gomplate/releases/latest/download/gomplate_linux-${GOMPLATE_ARCH}" \
     && chmod +x /usr/local/bin/gomplate \
     && apt-get install -y --no-install-recommends --allow-downgrades \
     libgetdns10 \
